# Socially-Aware-Robot-Navigation-with-Stochastic-Advantage-Actor-Critic

./: PC_Robot_Connection_Set_Up.md  README.md  Set_Up.md  Simulation_Set_UP.md  Workspace_Set_Up.md  conda_environment.yml
ActorCriticTest/Test/actor_model/: fingerprint.pb
ActorCriticTest/Test/actor_model/variables/: variables.data-00000-of-00001
Pretrain_A2C/critic_model/: fingerprint.pb  keras_metadata.pb
Pretrain_A2C/critic_model/variables/: variables.index
Social_Nav_Src/: Actor_model_sync_collide.py  Obstacles_State_Map.py  Reset_Env.py  Social_State_Map.py  Target_Human_State_Map.py  Visualise.py  agent.py  control.py  main.py
Test/: mymap.yaml
Test1/actor_model/: keras_metadata.pb  saved_model.pb
Test1/actor_model/variables/: variables.index
Test1/critic_model/: saved_model.pb
Test1/critic_model/variables/: variables.data-00000-of-00001
catkin_ws/gazebo_sfm_plugin/src/: PedestrianSFMPlugin.cpp
catkin_ws/ridgeback/ridgeback_description/urdf/: ridgeback.urdf.xacro
catkin_ws/src/gazebo_sfm_plugin/: CMakeLists.txt
catkin_ws/src/realsense_ros_gazebo/xacro/: depthcam.xacro
catkin_ws/src/ridgeback_desktop/ridgeback_viz/rviz/: navigation.rviz
gazebo_sfm_plugin/include/gazebo_sfm_plugin/: PedestrianSFMPlugin.h
ridgeback_simulator/ridgeback_gazebo/Media/models/cylinder/: cylinder.sdf
ridgeback_simulator/ridgeback_gazebo/Media/models/person/: pedestrian.sdf
ridgeback_simulator/ridgeback_gazebo/launch/: ridgeback_world.launch  spawn_ridgeback.launch
ridgeback_simulator/ridgeback_gazebo/worlds/: ridgeback_race.world
(+2 files in other folders)
